# ChangeLog for x11-libs/qt-gui
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jun 2009; Davide Pesavento <davidepesa@gmail.com> metadata.xml:
  Update USE descriptions (gtkstyle -> gtk).

  26 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-gui-4.5.9999.ebuild,
  qt-gui-4.9999.ebuild:
  Apply previous changesets to live ebuilds.

  25 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-gui-4.5.2.ebuild:
  Use doicon instead of opencoding icons installation.

  25 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-gui-4.5.2.ebuild:
  Rename gtkstyle flag to gtk. Drop redundant IUSE defaults.

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.2.ebuild:
  Add libX11 and libXext dependencies

*qt-gui-4.5.2 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org> +qt-gui-4.5.2.ebuild:
  Version bump to 4.5.2

  24 May 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.9999.ebuild,
  qt-gui-4.9999.ebuild, metadata.xml:
  Add gtkstyle on metadata.xml, QA fixes 

  21 May 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-gui-4.5.1-r1.ebuild,
  -files/qt-gui-4.5.1-ppc-pixmap-fix-backport-196152.patch:
  On tree

*qt-gui-4.5.1-r1 (12 May 2009)

  12 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +qt-gui-4.5.1-r1.ebuild,
  +files/qt-gui-4.5.1-ppc-pixmap-fix-backport-196152.patch:
  backported ppc fix from 4.5.2 - qt task 196152

  29 Apr 2009; Markos Chandras <hwoarang@gentoo.org> -qt-gui-4.5.1.ebuild:
  Remove 4.5.1. On tree now

*qt-gui-4.5.1 (23 Apr 2009)

  23 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +qt-gui-4.5.1.ebuild:
  qt 4.5.1 version bump

  21 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.9999.ebuild,
  qt-gui-4.9999.ebuild:
  Sync with tree

  04 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.9999.ebuild,
  qt-gui-4.9999.ebuild:
  Sync with portage packages
