@@ -3,8 +3,8 @@ AUX Linguist.desktop 362 RMD160 ce7f588d57300eb859634cabdccd5331da572c76 SHA1 ba
 AUX hardcoded_fonts.patch 520 RMD160 cdc8f5b4db20b4eede5eabad61ea7893e7b2fc8f SHA1 e23e2731074170585165d89822b83215ba0e3bea SHA256 0d428c620f995d1e96e649b3e49e9ce591b2882a38e600b485c6c8b509504c51
 AUX libqt4-read-kde4-kdeglobals.patch 7450 RMD160 f84a5b43917ae41e5b71cfd9f8b141e16c752ac4 SHA1 f23a0a1d6a4aa11e88c707d88ad54e09ebb43f65 SHA256 d11ac0946cb1ce6fadfefd73957db75edd989a985d7751d836bb4deb97688fb7
 DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
-EBUILD qt-gui-4.5.2.ebuild 5475 RMD160 34f1adc75042a821aa56b8ebc8107d0c9ce57301 SHA1 b032e82f4f9fb903b303daee044662bfc969e49f SHA256 a03e2710d2efc9dd3e410dcd7903a98a7b87de053175cd78287c79810c5244ca
+EBUILD qt-gui-4.5.2.ebuild 5819 RMD160 f0145d79c51fbf9de247f51846397dc059136421 SHA1 0a22a6cd15b51a0f15d1824b9ff57bcd5cfc43e2 SHA256 46c34574c60614571829883399de0d31587a7272234442c7e8a72088b64919b0
 EBUILD qt-gui-4.5.9999.ebuild 5258 RMD160 4276d9b84c60f8cba44cb849bfcf45b4fa3eaa35 SHA1 302418f50601ea798409ed357c783cf66c5ca775 SHA256 ece9759c8d9fc2707fcfe7846688c05b74bcd9777b04d2745181383a4cbe27d5
 EBUILD qt-gui-4.9999.ebuild 5222 RMD160 9c2db8855feb4e8a7400cf3974752a90554e6dd7 SHA1 341206b5d1c23941010dd7a4ef3c2f06091da81d SHA256 f20c7f509bd60fa4928d352a39745c54939affb247fd56eaf5cc2d2a0371811a
-MISC ChangeLog 6059 RMD160 5aa95ca001ddf5df4e04443d7612a365f19a68b3 SHA1 157550380c19a03e2be3cd31b52940c2365935d2 SHA256 541ae93a30492c0d44506d36203b05a878b73ea4c17c02671da6f556890401fe
+MISC ChangeLog 6187 RMD160 d6f9192da963dfbfc5e576e422abafc2ba2f0c68 SHA1 c8daffeb0cf60e612448666881bf6d79b2ca4a51 SHA256 98f667569e193aca1877b961db0c038cffb05243c3f6543c713999eaf33110ef
 MISC metadata.xml 507 RMD160 e5c9d9cc08810bc586827ee2f816d93e63497143 SHA1 2943df5cd767a4ac0616036ab7317fa6773c3731 SHA256 9ae179dbef03ae0119a9c3e9a44298bf364c9e9d55ac1a3f91954d01bad2f1ac
