@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> qt-gui-4.5.2.ebuild:
+  Add warning about using QGtkStyle, see also bug 250504.
+
   27 Jun 2009; Davide Pesavento <davidepesa@gmail.com> metadata.xml:
   Update USE descriptions (gtkstyle -> gtk).
 
